Bug 498325 - Wrong restoring of window position on close/open
Summary: Wrong restoring of window position on close/open
Status: RESOLVED FIXED
Alias: None
Product: krusader
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.9.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Krusader Bugs Distribution List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-01-06 16:29 UTC by Igor Mironchik
Modified: 2025-08-14 03:35 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
It moves up... (1.78 MB, image/gif)
2025-01-06 16:29 UTC, Igor Mironchik
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Igor Mironchik 2025-01-06 16:29:16 UTC
Created attachment 177150 [details]
It moves up...

SUMMARY
Krusader moves up every time closed/opened again. Look at the attached GIF.


STEPS TO REPRODUCE
1. Open Krusader
2. Remember its position
3. Close it
4. Open again

OBSERVED RESULT
Every new opening moves Krusader upper.


EXPECTED RESULT
Krusader should restore its position as was.


SOFTWARE/OS VERSIONS
Operating System: openSUSE Tumbleweed 20250103
KDE Plasma Version: 6.2.5
KDE Frameworks Version: 6.9.0
Qt Version: 6.8.1
Kernel Version: 6.12.6-1-default (64-bit)
Graphics Platform: X11
Processors: 4 × Intel® Core™ i5-7200U CPU @ 2.50GHz
Memory: 7,6 GiB of RAM
Graphics Processor: Mesa Intel® HD Graphics 620
Comment 1 Toni Asensi Esteve 2025-01-10 22:17:32 UTC
Hello. Does it happen to other programs like Dolphin?
Comment 2 Igor Mironchik 2025-01-10 23:16:07 UTC
(In reply to Toni Asensi Esteve from comment #1)
> Hello. Does it happen to other programs like Dolphin?

Hello. No. I see it only with Krusader.
Comment 3 Bug Janitor Service 2025-07-05 04:26:45 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/krusader/-/merge_requests/169
Comment 4 Igor Mironchik 2025-08-14 03:35:46 UTC
Git commit e78991813ebb97d447fa84f53756bcd53b51d2de by Igor Mironchik.
Committed on 14/08/2025 at 03:27.
Pushed by imironchik into branch 'master'.

Fix restoring a window's position after restart.

M  +4    -2    app/krusader.cpp

https://invent.kde.org/utilities/krusader/-/commit/e78991813ebb97d447fa84f53756bcd53b51d2de