Fix restoring a window's position after restart.

BUG: 498325